<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity5">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fileName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/file_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputKey"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_"
            android:inputType="number|numberPassword"
            android:visibility="invisible" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginTop="100dp"
        android:text="@string/ok"
        app:layout_constraintStart_toStartOf="@+id/fileName"
        app:layout_constraintTop_toTopOf="@+id/fileName" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="200dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/fileName"
        app:layout_constraintTop_toTopOf="@+id/fileName" />
</androidx.constraintlayout.widget.ConstraintLayout>